1.15.16
-------

1.15.15
-------
(RB=297875)
Resurrecting InvokeAwares.

(RB=276851)
Checking in support for RestLi filters.
Checking in RestLi filters integration test.

1.15.14
-------
(RB=247966)
Changes to allow 2.0 URI format.
2.0 URI format will be publicly documented shortly.
Related refactoring of key encoding.
Added many tests to cover both 1.0 and 2.0 URI format.

(RB=295979)
add setter for d2ServicePath in D2ClientConfig

1.15.13
-------
(RB=292644)
Support Avro translation OptionalDefaultMode in PegasusPlugin.

(RB=294234)
Fix avro schema translator to not translate default values (that will not be used) when avro override is present.

(RB=295035)
Added a PegasusSchema pdsc.

1.15.12
-------
(RB=293255)
Reapply "add LRU mode and minimum pool size to AsyncPool"

(RB=293315)
Add more async pool metrics

1.15.11
-------
(RB=290169)
PegasusPlugin: Deprecate compatibility level OFF and short-circuit to IGNORE.

(RB=288855)
Changing the action parameter setting method name in new client builders to "<parameter name>Param".

(RB=291596)
Add support for AsyncR2Servlet in RestliServlet, update examples to use Jetty 8 with async enabled.

(RB=290827)
Adding a central place (new module r2-unittest-util) to check in test classes all across r2 and can be used in all r2 tests

1.15.10
-------
(RB=289792)
Fix scaladoc extractor to not throw an exception on a undocumented param.

(RB=290416)
Fixing D2 client to log only the non-sensitive parts of the request.

1.15.9
------
(RB=288605)
Fix bug in scaladoc provider where class and object of same were not disambiguated between correctly.

(RB=289001)
Fix bug where when maven artifacts are not properly depended on using gradle 1.9+.  This was because
the maven pom contained test and compile scopes for the same artifact.  The fix is to not publish the
test artifact dependencies into maven poms.

1.15.8
------
(RB=288441)
Relax master colo check in D2Config if enableSymlink is set.

(RB=288471)